--- a/Assignment 2/pages/gioi-thieu-chung.html
+++ b/Assignment 2/pages/gioi-thieu-chung.html
@@ -112,4 +112,4 @@
     background-color: bisque;
     text-align: center;
     font-variant: small-caps;
-    clear: both;">Trường THPT Yên Lãng © 2017. All rights reserved.</footer>
+    clear: both; color: black;">Trường THPT Yên Lãng © 2017. All rights reserved.</footer>
