--- a/Assignment 2/pages/tuyensinh.html
+++ b/Assignment 2/pages/tuyensinh.html
@@ -117,7 +117,7 @@
   <nav class="menuu" style="background-color: #4ea1ff">
     <ul style="list-style: none; display: flex; justify-content: center; padding: 10px 0; margin: 0;">
       <li style="margin: 0 10px; position: relative;">
-        <a href="/Assignment 2/Untitled-1.html">Trang chủ</a>
+        <a href="/Assignment 2/index.html">Trang chủ</a>
       </li>
       <li style="margin: 0 10px; position: relative;">
         <a href="#">Giới thiệu <i class="fa fa-caret-down" aria-hidden="true"></i></a>
